Bug 1675073: Manually set the stack size for TaskController pool threads. r=aosmond,smaug

Differential Revision: https://phabricator.services.mozilla.com/D99611